Update personal portfolio

--- a/projects/global.layout.pug
+++ b/projects/global.layout.pug
@@ -5,13 +5,15 @@ html(lang='en')
       meta(charset='utf-8')
       meta(http-equiv='X-UA-Compatible', content='IE=edge')
       meta(name='viewport', content='width=device-width, initial-scale=1.0')
+      link(rel='icon' href='http://halilsener.com/img/favicon.png' sizes="152x152" type='image/png')
+      meta(name='theme-color', content='#2c3e50')
 
   body
     block content
 
   block foot
     link(rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css')
-    link(rel='stylesheet', href='global.style.css')
+    link(rel='stylesheet', href='http://halilsener.com/global.style.css')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     script.
