Add random quote machine and some small fixes

--- a/projects/personal-portfolio/index.pug
+++ b/projects/personal-portfolio/index.pug
@@ -29,9 +29,9 @@ block content
 
   .container
     .row
-      .col-md-4
+      .col-sm-4.hidden-xs
         img.img-responsive.img-circle(src='img/avatar.png')
-      .col-md-8
+      .col-sm-8
         h1 Halil Ibrahim Sener
         h2 CS Student, Seeking Internship
         div.description
@@ -76,7 +76,7 @@ block content
     .row
       .col-md-12
         h3 Portfolio
-      .col-md-6.col-md-4
+      .col-sm-6.col-md-4
         .thumbnail
           img(src='img/ws-chat-example.png')
           .caption
@@ -84,7 +84,7 @@ block content
             p
               a.btn.btn-primary.btn-sm(href='https://ws-chat-example.herokuapp.com/' target='_blank' role='button') Demo
               a.btn.btn-default.btn-sm(href='https://github.com/hisener/ws-chat-example' target='_blank' role='button') Code
-      .col-md-6.col-md-4
+      .col-sm-6.col-md-4
         .thumbnail
           img(src='img/markdown-previewer.png')
           .caption
@@ -92,7 +92,7 @@ block content
             p
               a.btn.btn-primary.btn-sm(href='https://hisener-markdown-previewer.herokuapp.com/' target='_blank' role='button') Demo
               a.btn.btn-default.btn-sm(href='https://github.com/hisener/markdown-previewer' target='_blank' role='button') Code
-      .col-md-6.col-md-4
+      .col-sm-6.col-md-4
         .thumbnail
           img(src='img/url-shortener.png')
           .caption
@@ -100,7 +100,7 @@ block content
             p
               a.btn.btn-primary.btn-sm(href='https://hisener-url-shortener.herokuapp.com/' target='_blank' role='button') Demo
               a.btn.btn-default.btn-sm(href='https://github.com/hisener/url-shortener' target='_blank' role='button') Code
-      .col-md-6.col-md-4
+      .col-sm-6.col-md-4
         .thumbnail
           img(src='img/header-parser.png')
           .caption
@@ -108,7 +108,7 @@ block content
             p
               a.btn.btn-primary.btn-sm(href='http://hisener-header-parser.herokuapp.com/' target='_blank' role='button') Demo
               a.btn.btn-default.btn-sm(href='https://github.com/hisener/header-parser' target='_blank' role='button') Code
-      .col-md-6.col-md-4
+      .col-sm-6.col-md-4
         .thumbnail
           img(src='img/timestamp-api.png')
           .caption
