--- a/projects/tribute-page/index.pug
+++ b/projects/tribute-page/index.pug
@@ -61,5 +61,8 @@ block content
       footer.footer
         span.text-muted
           a(href='https://en.wikipedia.org/wiki/Roger_Federer', target='_blank') Roger Federer - Wikipedia
-        span
-          a.pull-right(href='https://github.com/hisener', target='_blank') hisener@github
+        span.pull-right
+          a(href='http://halilsener.com/') halilsener.com
+
+block append foot
+  link(rel='stylesheet', href='style.css')
