Add local weather

--- a/projects/random-quote-machine/index.pug
+++ b/projects/random-quote-machine/index.pug
@@ -9,6 +9,8 @@ block content
     .row
       .header
         h1.text-center Random Quote Machine
+        p.text-center
+          a(href='https://github.com/hisener/halilsener.com/blob/master/projects/random-quote-machine' target='_blank') (Source on github)
       .main
         p.text-center
           a.btn.btn-md.btn-success.new-quote(role='button') New Quote
