Add wikipedia viewer

--- a/projects/local-weather/index.pug
+++ b/projects/local-weather/index.pug
@@ -1,8 +1,7 @@
 extends ../global.layout.pug
 
 block append head
-  title Random Quote Machine - Halil Ibrahim Sener
-  meta(name='description' content='My personal webpage and freeCodeCamp projects')
+  title Local Weather - Halil Ibrahim Sener
 
 block content
   .container
