--- a/projects/local-weather/style.css
+++ b/projects/local-weather/style.css
@@ -7,8 +7,9 @@ h2 {
   }
 }
 .well {
+  background-color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, 0.4);
-  border: 0px;
+  border: 0;
   padding: 0;
 }
 .glyphicon-edit {
