--- a/projects/tribute-page/style.css
+++ b/projects/tribute-page/style.css
@@ -1,20 +1,20 @@
 h2 {
-    margin-top: 0px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #e5e5e5;
+  margin-top: 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #e5e5e5;
 }
 h3 {
-    margin-top: 10.5px;
-    margin-bottom: 10.5px;
+  margin-top: 10.5px;
+  margin-bottom: 10.5px;
 }
 .img-responsive {
-    max-height: 300px;
+  max-height: 300px;
 }
 .well {
-    padding: 10px
+  padding: 10px
 }
 .footer {
-    padding-top: 10px;
-    border-top: 1px solid #e5e5e5;
-    margin-bottom: 10px;
+  padding-top: 10px;
+  border-top: 1px solid #e5e5e5;
+  margin-bottom: 10px;
 }
