Update Personal Portfolio > description

--- a/projects/personal-portfolio/index.pug
+++ b/projects/personal-portfolio/index.pug
@@ -49,9 +49,9 @@ block content
         div.description
           ul
             li Computer Science Student @ Hacettepe [13-18] (Ankara, Turkey)
-            li Part-time Software Engineer @ MilSOFT Software Tech. (Ankara, Turkey)
             li Camper @ freeCodeCamp
             li Seeking Internship for Summer 2017
+            li Former Part-time Software Engineer @ MilSOFT Software Tech. (Ankara, Turkey)
 
   #tech-stack.container
     .row
