Fix insecure requests

--- a/projects/local-weather/index.pug
+++ b/projects/local-weather/index.pug
@@ -38,7 +38,7 @@ block content
       |  &
       |
       a(href='https://geoip.nekudo.com/' target='_blank') Nekudo GeoIP
-      a.pull-right(href='http://halilsener.com/') halilsener.com
+      a.pull-right(href='https://halilsener.com/') halilsener.com
 
 block append foot
   link(rel='stylesheet', href='style.css')
