--- a/projects/personal-portfolio/index.pug
+++ b/projects/personal-portfolio/index.pug
@@ -5,19 +5,19 @@ block append head
   meta(name='description' content='My personal webpage and freeCodeCamp projects')
   meta(name='og:title' content='Halil Ibrahim Sener')
   meta(name='og:description' content='My personal webpage and freeCodeCamp projects')
-  meta(name='og:image' content='http://halilsener.com/img/avatar.png')
+  meta(name='og:image' content='/img/avatar.png')
 
 block content
   -
     var portfolio = [
-      { title: 'Pirate Radio', image: 'img/pirate-radio.png', demo: 'http://pirate-radio.herokuapp.com/', code: 'https://github.com/hisener/pirate-radio' },
+      { title: 'Pirate Radio', image: 'img/pirate-radio.png', demo: 'https://pirate-radio.herokuapp.com/', code: 'https://github.com/hisener/pirate-radio' },
       { title: 'WebSocket Chat Example', image: 'img/ws-chat-example.png', demo: 'https://ws-chat-example.herokuapp.com/', code: 'https://github.com/hisener/ws-chat-example' },
       { title: 'Markdown Previewer', image: 'img/markdown-previewer.png', demo: 'https://hisener-markdown-previewer.herokuapp.com/', code: 'https://github.com/hisener/markdown-previewer' },
-      { title: 'Wikipedia Viewer', image: 'img/wikipedia-viewer.png', demo: 'http://halilsener.com/wikipedia-viewer/', code: 'https://github.com/hisener/halilsener.com/tree/master/projects/wikipedia-viewer' },
-      { title: 'Local Weather', image: 'img/local-weather.png', demo: 'http://halilsener.com/local-weather/', code: 'https://github.com/hisener/halilsener.com/tree/master/projects/local-weather' },
-      { title: 'Random Quote Machine', image: 'img/random-quote-machine.png', demo: 'http://halilsener.com/random-quote-machine/', code: 'https://github.com/hisener/halilsener.com/tree/master/projects/random-quote-machine' },
+      { title: 'Wikipedia Viewer', image: 'img/wikipedia-viewer.png', demo: 'https://halilsener.com/wikipedia-viewer/', code: 'https://github.com/hisener/halilsener.com/tree/master/projects/wikipedia-viewer' },
+      { title: 'Local Weather', image: 'img/local-weather.png', demo: 'https://halilsener.com/local-weather/', code: 'https://github.com/hisener/halilsener.com/tree/master/projects/local-weather' },
+      { title: 'Random Quote Machine', image: 'img/random-quote-machine.png', demo: 'https://halilsener.com/random-quote-machine/', code: 'https://github.com/hisener/halilsener.com/tree/master/projects/random-quote-machine' },
       { title: 'Url Shortener Microservice', image: 'img/url-shortener.png', demo: 'https://hisener-url-shortener.herokuapp.com/', code: 'https://github.com/hisener/url-shortener' },
-      { title: 'Header Parser Microservice', image: 'img/header-parser.png', demo: 'http://hisener-header-parser.herokuapp.com/', code: 'https://github.com/hisener/header-parser' },
+      { title: 'Header Parser Microservice', image: 'img/header-parser.png', demo: 'https://hisener-header-parser.herokuapp.com/', code: 'https://github.com/hisener/header-parser' },
       { title: 'Timestamp Microservice', image: 'img/timestamp-api.png', demo: 'https://hisener-timestamp-api.herokuapp.com/', code: 'https://github.com/hisener/timestamp-api' },
     ]
 
