--- a/projects/random-quote-machine/index.pug
+++ b/projects/random-quote-machine/index.pug
@@ -23,7 +23,7 @@ block content
           |
           a(href='http://forismatic.com/en/api/' target='_blank') forismatic api
         span.pull-right
-          a(href='http://halilsener.com/') halilsener.com
+          a(href='https://halilsener.com/') halilsener.com
 
 block append foot
   link(rel='stylesheet', href='style.css')
