--- a/projects/tribute-page/index.pug
+++ b/projects/tribute-page/index.pug
@@ -62,7 +62,7 @@ block content
         span.text-muted
           a(href='https://en.wikipedia.org/wiki/Roger_Federer', target='_blank') Roger Federer - Wikipedia
         span.pull-right
-          a(href='http://halilsener.com/') halilsener.com
+          a(href='https://halilsener.com/') halilsener.com
 
 block append foot
   link(rel='stylesheet', href='style.css')
