--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -19,16 +19,15 @@
 }
 
 .footer-social {
-    background: $darkerpurple;
-    padding: $vpadding * 2 0;
-    color: $darkpurple;
+    padding: $vpadding 0;
+    color: $active;
     font-size: 0.9em;
     a {
         color: $lightpurple;
         text-decoration: none;
         &:active,
         &:hover {
-            color: $lightblue;
+            color: $default;
         }
     }
     ul.social {
@@ -36,7 +35,7 @@
         text-align: center;
         padding: 0;
         a {
-            color: $lightblue;
+            color: $default;
             text-decoration: none;
         }
         li {
@@ -52,10 +51,10 @@
             transition: all .1s ease;
             &:hover,
             &:focus {
-                background-color: $darkpurple;
                 -webkit-transform: rotate(360deg);
                 -moz-transform: rotate(360deg);
                 -ms-transform: rotate(360deg);
+                transition-duration: 1s;
                 transform: rotate(360deg);
                 a {
                     text-decoration: none;
