--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,11 +2,6 @@
     background: none;
 }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-    color: $red;
-}
-
 .navbar-header {
     color: #fff;
     @media(max-width: 768px) {
@@ -66,10 +61,9 @@
 
 .navbar-default .navbar-nav > li > a {
     text-transform: uppercase;
-    color: #8ab2ff;
-    line-height: 120px;
+    color: #18bc9c;
+    line-height: 40px;
     font-size: 0.9em;
-    font-weight: bold;
     font-weight: 700;
     @media(max-width: 768px) {
         line-height: 40px;
@@ -95,5 +89,5 @@
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: $lightblue;
+    background-color: $default;
 }
