--- a/src/scss/boot.scss
+++ b/src/scss/boot.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import "~prismjs/themes/prism-tomorrow.css";
+//@import "~prismjs/themes/prism-coy.css";
 
 $bootstrap-sass-asset-helper: true;
 
