--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,12 +2,14 @@
 * COLORS mostly from http://materialcolors.com/
 */
 
-$background: #221931;
 $darkpurple: #2e2242;
 $darkerpurple: #170f24;
 $lightpurple: #766592;
 $purple: #5E70A6;
-$lightblue: #8ab2ff;
-$red: #e52f45;
+
+// Url colors
+$default: #18bc9c;
+$active: #2c3e50;
+
 $blue: #3B4B7D;
 $vpadding: 20px;
