Update about and contact pages as well as first post

--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -75,7 +75,7 @@
             color: $default;
         }
         blockquote {
-            border-left-color: $purple;
+            border-left-color: $active;
         }
     }
     .post-meta {
