Fix tag urls as kebab case

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -48,7 +48,7 @@
             -webkit-border-radius: 50%;
             border-radius: 50%;
             margin: 10px;
-            transition: all .1s ease;
+            transition: all 1s ease;
             &:hover,
             &:focus {
                 -webkit-transform: rotate(360deg);
